# SPDX-FileCopyrightText: 2024 griff (original Nix.rs)
# SPDX-FileCopyrightText: 2025 Jörg Thalheim (Harmonia adaptation)
# SPDX-License-Identifier: MIT

[package]
name                 = "harmonia-store-content-address"
version.workspace    = true
authors.workspace    = true
edition.workspace    = true
license.workspace    = true
homepage.workspace   = true
repository.workspace = true
description          = "Content addressing for the Nix store"

[dependencies]
derive_more         = { workspace = true }
harmonia-store-path = { workspace = true, public = true }
harmonia-utils-hash = { workspace = true, public = true }
proptest            = { workspace = true, optional = true }
proptest-derive     = { workspace = true, optional = true }
serde               = { workspace = true }
thiserror           = { workspace = true }

[dev-dependencies]
harmonia-store-content-address = { path = ".", features = [ "test" ] }
harmonia-utils-hash            = { workspace = true }
hex-literal                    = { workspace = true }
rstest                         = { workspace = true }

[features]
test = [ "proptest", "proptest-derive", "harmonia-utils-hash/test", "harmonia-store-path/test" ]

[lints]
workspace = true
