[package]
name = "harmonia-store-core-legacy"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
harmonia-store-core = { path = "../harmonia-store-core" }
thiserror = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
ed25519-dalek = { workspace = true }

[dev-dependencies]

[lints]
workspace = true
