# SPDX-FileCopyrightText: 2024 griff (original Nix.rs)
# SPDX-FileCopyrightText: 2026 Jörg Thalheim (Harmonia adaptation)
# SPDX-License-Identifier: MIT

[package]
name = "harmonia-store-core"
version = "0.0.0-alpha.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Core Nix store semantics - pure types and validation logic"
readme = "README.md"

[dependencies]
bytes = { workspace = true, features = ["serde"] }
data-encoding = { workspace = true }
derive_more = { workspace = true }
harmonia-utils-base-encoding = { version = "0.0.0-alpha.0" }
harmonia-utils-hash = { version = "0.0.0-alpha.0" }
num_enum = { workspace = true }
proptest = { workspace = true, optional = true }
proptest-derive = { workspace = true, optional = true }
ring = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = "3.16"
test-strategy = { workspace = true, optional = true }
harmonia-utils-test = { version = "0.0.0-alpha.0", optional = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["io-util", "sync"] }
tracing = { workspace = true }
zerocopy = { version = "0.8", features = ["derive"] }

[dev-dependencies]
futures = { workspace = true }
harmonia-nar = { version = "3.0.0" }
harmonia-utils-test = { version = "0.0.0-alpha.0" }
hex-literal = "1.1"
proptest = { workspace = true }
proptest-derive = { workspace = true }
rstest = { workspace = true }
rstest_reuse = "0.7"
tempfile = { workspace = true }
test-log = "0.2"
test-strategy = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-test = "0.4"

[features]
test = ["proptest", "proptest-derive", "test-strategy", "harmonia-utils-test", "harmonia-utils-hash/test"]

[[test]]
name = "json_upstream"
path = "tests/json_upstream/mod.rs"

[lints]
workspace = true
