# SPDX-FileCopyrightText: 2024 griff (original Nix.rs)
# SPDX-FileCopyrightText: 2025 Jörg Thalheim (Harmonia adaptation)
# SPDX-License-Identifier: MIT

[package]
name                 = "harmonia-store-core"
version              = "0.0.0-alpha.0"
authors.workspace    = true
edition.workspace    = true
license.workspace    = true
homepage.workspace   = true
repository.workspace = true
description          = "Core Nix store semantics - pure types and validation logic"
readme               = "README.md"

[dependencies]
bytes                        = { workspace = true, features = [ "serde" ] }
data-encoding                = { workspace = true }
derive_more                  = { workspace = true }
ed25519-dalek                = { workspace = true, optional = true }
getrandom                    = { workspace = true, optional = true }
harmonia-utils-base-encoding = { workspace = true }
harmonia-utils-hash          = { workspace = true }
harmonia-utils-test          = { workspace = true, optional = true }
proptest                     = { workspace = true, optional = true }
proptest-derive              = { workspace = true, optional = true }
serde                        = { workspace = true }
serde_json                   = { workspace = true, optional = true }
subtle                       = { version = "2", default-features = false, optional = true }
thiserror                    = { workspace = true }
zerocopy                     = { version = "0.8", features = [ "derive" ] }
zeroize                      = { version = "1", optional = true }

[dev-dependencies]
harmonia-store-core = { path = ".", features = [ "test" ] }
hex-literal         = { workspace = true }
rstest              = { workspace = true }
tempfile            = { workspace = true }

[features]
default = [ "signature", "derivation" ]
# Cryptographic signing of store paths (NAR signatures).
signature = [ "ed25519-dalek", "getrandom", "subtle", "zeroize" ]
# Derivations, derived paths, placeholders, realisations.
derivation = [ "serde_json", "signature" ]
test       = [ "proptest", "proptest-derive", "harmonia-utils-test", "harmonia-utils-hash/test" ]

[[test]]
name = "json_upstream"
path = "tests/json_upstream/mod.rs"

[lints]
workspace = true
