# SPDX-FileCopyrightText: 2025 Jörg Thalheim
# SPDX-License-Identifier: MIT

[package]
name = "harmonia-store-db"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "SQLite database interface for Nix store metadata"
readme = "README.md"

[dependencies]
rusqlite = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
