# SPDX-FileCopyrightText: 2025 Jörg Thalheim
# SPDX-License-Identifier: MIT

[package]
name                 = "harmonia-store-db"
version.workspace    = true
authors.workspace    = true
edition.workspace    = true
license.workspace    = true
homepage.workspace   = true
repository.workspace = true
description          = "SQLite database interface for Nix store metadata"
readme               = "README.md"

[dependencies]
harmonia-store-content-address = { workspace = true }
harmonia-store-derivation      = { workspace = true }
harmonia-store-path            = { workspace = true }
harmonia-store-path-info       = { workspace = true }
harmonia-utils-hash            = { workspace = true }
harmonia-utils-signature       = { workspace = true }
rusqlite                       = { workspace = true }
thiserror                      = { workspace = true }
tracing                        = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
