# SPDX-FileCopyrightText: 2024 griff (original Nix.rs)
# SPDX-FileCopyrightText: 2025 Jörg Thalheim (Harmonia adaptation)
# SPDX-License-Identifier: MIT

[package]
name                 = "harmonia-store-derivation"
version              = "0.0.0-alpha.0"
authors.workspace    = true
edition.workspace    = true
license.workspace    = true
homepage.workspace   = true
repository.workspace = true
description          = "Core Nix store semantics - pure types and validation logic"
readme               = "README.md"

[dependencies]
bytes                          = { workspace = true, features = [ "serde" ], public = true }
data-encoding                  = { workspace = true }
derive_more                    = { workspace = true }
harmonia-store-content-address = { workspace = true, public = true }
harmonia-store-path            = { workspace = true, public = true }
harmonia-utils-base-encoding   = { workspace = true }
harmonia-utils-hash            = { workspace = true }
harmonia-utils-signature       = { workspace = true, public = true }
harmonia-utils-test            = { workspace = true, optional = true }
proptest                       = { workspace = true, optional = true }
proptest-derive                = { workspace = true, optional = true }
serde                          = { workspace = true }
serde_json                     = { workspace = true, public = true }
thiserror                      = { workspace = true }
zerocopy                       = { version = "0.8", features = [ "derive" ] }

[dev-dependencies]
harmonia-store-derivation = { path = ".", features = [ "test" ] }
hex-literal               = { workspace = true }
rstest                    = { workspace = true }
tempfile                  = { workspace = true }

[features]
test = [
    "proptest",
    "proptest-derive",
    "harmonia-utils-test",
    "harmonia-store-content-address/test",
    "harmonia-store-path/test",
    "harmonia-utils-hash/test",
    "harmonia-utils-signature/test",
]

[[test]]
name = "json_upstream"
path = "tests/json_upstream/mod.rs"

[lints]
workspace = true
