[package]
name                 = "harmonia-store-nar-info"
version.workspace    = true
authors.workspace    = true
edition.workspace    = true
license.workspace    = true
homepage.workspace   = true
repository.workspace = true
description          = "NarInfo formatting and construction for Nix binary cache protocol"

[dependencies]
harmonia-store-core      = { workspace = true }
harmonia-store-path-info = { workspace = true }
harmonia-utils-hash      = { workspace = true }
serde                    = { workspace = true }

[dev-dependencies]
harmonia-store-core      = { workspace = true }
harmonia-store-path-info = { workspace = true }
harmonia-utils-test      = { workspace = true }
hex-literal              = { workspace = true }
serde_json               = { workspace = true }

[[test]]
name = "json_upstream"
path = "tests/json_upstream/mod.rs"

[lints]
workspace = true
