# SPDX-FileCopyrightText: 2025 Obsidian Systems
# SPDX-License-Identifier: MIT

[package]
name                 = "harmonia-store-path-info"
version.workspace    = true
authors.workspace    = true
edition.workspace    = true
license.workspace    = true
homepage.workspace   = true
repository.workspace = true
description          = "ValidPathInfo, NarHash, and JSON serialization for Nix store metadata"

[dependencies]
harmonia-store-content-address = { workspace = true }
harmonia-store-path            = { workspace = true }
harmonia-utils-hash            = { workspace = true }
harmonia-utils-signature       = { workspace = true }
proptest                       = { workspace = true, optional = true }
proptest-derive                = { workspace = true, optional = true }
serde                          = { workspace = true }

[dev-dependencies]
harmonia-store-path-info = { path = ".", features = [ "test" ] }
harmonia-utils-test      = { workspace = true }
hex-literal              = { workspace = true }
serde_json               = { workspace = true }

[features]
test = [ "proptest", "proptest-derive", "harmonia-utils-hash/test" ]

[[test]]
name = "json_upstream"
path = "tests/json_upstream/mod.rs"

[lints]
workspace = true
