# SPDX-FileCopyrightText: 2024 griff (original Nix.rs)
# SPDX-FileCopyrightText: 2026 Jörg Thalheim (Harmonia adaptation)
# SPDX-License-Identifier: MIT

[package]
name                 = "harmonia-store-path"
version.workspace    = true
authors.workspace    = true
edition.workspace    = true
license.workspace    = true
homepage.workspace   = true
repository.workspace = true
description          = "Nix store path types, parsing, validation, and content addressing"

[dependencies]
derive_more                  = { workspace = true }
harmonia-utils-base-encoding = { workspace = true }
harmonia-utils-hash          = { workspace = true }
harmonia-utils-test          = { workspace = true, optional = true }
proptest                     = { workspace = true, optional = true }
proptest-derive              = { workspace = true, optional = true }
serde                        = { workspace = true }
thiserror                    = { workspace = true }
zerocopy                     = { version = "0.8", features = [ "derive" ] }

[dev-dependencies]
harmonia-store-path = { path = ".", features = [ "test" ] }
hex-literal         = { workspace = true }
rstest              = { workspace = true }

[features]
test = [ "proptest", "proptest-derive", "harmonia-utils-test", "harmonia-utils-hash/test" ]

[[test]]
name = "json_upstream"
path = "tests/json_upstream/mod.rs"

[lints]
workspace = true
