# SPDX-FileCopyrightText: 2024 griff
# SPDX-FileCopyrightText: 2025 Jörg Thalheim
# SPDX-License-Identifier: EUPL-1.2 OR MIT
#
# This crate is derived from Nix.rs (https://github.com/griff/Nix.rs)
# Upstream commit: f5d129b71bb30b476ce21e6da2a53dcb28607a89

[package]
name                 = "harmonia-store-remote"
description          = "Nix daemon client library for remote store access"
version.workspace    = true
authors.workspace    = true
edition.workspace    = true
license.workspace    = true
homepage.workspace   = true
repository.workspace = true
readme               = "README.md"

[dependencies]
# Harmonia crates
harmonia-nar        = { version = "3.0.0" }
harmonia-protocol   = { version = "3.0.0" }
harmonia-store-core = { version = "0.0.0-alpha.0" }
harmonia-utils-io   = { version = "0.0.0-alpha.0" }

# Async runtime
async-stream = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
tokio        = { workspace = true }

# Utilities
tracing = { workspace = true }

# Metrics (optional but commonly used)
prometheus = { workspace = true }

[lints]
workspace = true
