# SPDX-FileCopyrightText: 2024 griff (original Nix.rs)
# SPDX-FileCopyrightText: 2025 Jörg Thalheim (Harmonia adaptation)
# SPDX-License-Identifier: MIT

[package]
name = "harmonia-test-utils"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Test utilities for Harmonia (proptest strategies, macros)"

[dependencies]
bytes = { workspace = true }
pretty_assertions = { workspace = true }
proptest = { workspace = true }

[lints]
workspace = true
