# SPDX-FileCopyrightText: 2024 griff (original Nix.rs)
# SPDX-FileCopyrightText: 2025 Jörg Thalheim (Harmonia adaptation)
# SPDX-License-Identifier: MIT

[package]
name = "harmonia-utils-base-encoding"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Base encoding utilities for Harmonia (Nix base32, hex, base64)"

[dependencies]
data-encoding = { workspace = true }
derive_more = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
hex-literal = "0.4"
proptest = { workspace = true }
rstest = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
