# SPDX-FileCopyrightText: 2024 griff (original Nix.rs)
# SPDX-FileCopyrightText: 2025 Jörg Thalheim (Harmonia adaptation)
# SPDX-License-Identifier: MIT

[package]
name                 = "harmonia-utils-io"
version              = "0.0.0-alpha.0"
authors.workspace    = true
edition.workspace    = true
license.workspace    = true
homepage.workspace   = true
repository.workspace = true
description          = "Async I/O utilities for Harmonia"
readme               = "README.md"

[dependencies]
bytes            = { workspace = true }
futures          = { workspace = true }
pin-project-lite = { workspace = true }
tokio            = { workspace = true, features = [ "io-util", "sync" ] }
tracing          = { workspace = true }

[dev-dependencies]
hex-literal   = { workspace = true }
proptest      = { workspace = true }
rstest        = { workspace = true }
test-strategy = { workspace = true }
tokio-test    = { workspace = true }

[lints]
workspace = true
